# mavlink_generator

./: .cursorignore  .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.cursor/rules/: code-generation.mdc  project-core.mdc  rust-generator.mdc  tauri-ui.mdc
.github/workflows/: release.yml  sync-github-metadata.yml
docs/: protocol-layer.md
docs/release-notes/: v0.1.0.md
docs/screenshots/: README.md
examples/c/: CMakeLists.txt  Makefile  README.md
examples/c/include/: gcs_context.h  port_picker.h  sample_mission.h  serial_link.h
examples/c/src/: port_picker.c  sample_mission.c  serial_link.c  sitl_gcs.c
examples/cpp/: CMakeLists.txt  README.md
examples/cpp/include/: gcs_context.hpp  port_picker.hpp  sample_mission.hpp  serial_link.hpp
examples/cpp/src/: port_picker.cpp  serial_link.cpp  sitl_gcs.cpp
examples/csharp/: GcsContext.cs  PortPicker.cs  Program.cs  README.md  SampleMission.cs  SerialLink.cs  SitlGcs.csproj
examples/dart/: .flutter-plugins-dependencies  README.md  pubspec.yaml
examples/dart/lib/: gcs_context.dart  port_picker.dart  protocol_progress.dart  sample_mission.dart  serial_link.dart
examples/javascript/: README.md  package-lock.json  package.json
examples/javascript/lib/: gcs_context.js  port_picker.js  sample_mission.js  serial_link.js
examples/python/: README.md  bindings.py  gcs_context.py  port_picker.py  pyproject.toml  sample_mission.py  serial_link.py  sitl_gcs.py
examples/rust/: Cargo.toml  README.md
examples/rust/src/: gcs_context.rs  lib.rs  main.rs  port_picker.rs  sample_mission.rs  serial_link.rs
examples/typescript/: README.md  package-lock.json  package.json
examples/typescript/src/: gcs_context.ts  port_picker.ts  sample_mission.ts  serial_link.ts  sitl_gcs.ts
lib/mavlink/: crc.dart  mavlink.dart  mavlink_message.dart  types.dart
lib/mavlink/dialects/: rt_rc.dart
mavlink/: README.md
mavlink/message_definitions/v1.0/: rt_rc.xml
src/: cli.rs  crc.rs  dialect_deprecated.rs  dialect_entry.rs  dialect_enum.rs  dialect_field.rs  dialect_message.rs  dialect_param.rs  document.rs  driver.rs  error.rs  generator.rs  lib.rs  main.rs  util.rs  xml_util.rs
src/generate/: examples.rs  mod.rs  runtime.rs
src/generate/c/: examples.rs  generator.rs  mod.rs  runtime.rs  util.rs
src/generate/cpp/: examples.rs  generator.rs  mod.rs  runtime.rs  util.rs
src/generate/csharp/: examples.rs  generator.rs  mod.rs  runtime.rs  util.rs
src/generate/dart/: examples.rs  generator.rs  (+4 more)
src/xml/: dialect_deprecated.rs  dialect_entry.rs  dialect_enum.rs  dialect_field.rs  dialect_message.rs  document.rs  mavlink_type.rs  mod.rs  util.rs
templates/c/: crc.h  mavlink_frame.h  mavlink_memory.h  mavlink_message.h  mavlink_protocols.h
templates/cpp/: crc.hpp  mavlink_dialect.hpp  mavlink_message.hpp  mavlink_protocols.hpp
templates/csharp/: mavlink_dialect.cs  mavlink_protocols.cs
templates/dart/: mavlink_dialect.dart  mavlink_frame.dart  pubspec.yaml
templates/js/: crc.js  mavlink_dialect.js  mavlink_frame.js  mavlink_message.js  mavlink_parser.js  mavlink_protocols.js
templates/py/: mavlink_dialect.py  mavlink_message.py  mavlink_protocols.py  mavlink_types.py
templates/rust/: mavlink_dialect.rs  mavlink_frame.rs  mavlink_message.rs  mavlink_protocols.rs
templates/ts/: crc.ts  mavlink_dialect.ts  mavlink_frame.ts  mavlink_message.ts  mavlink_version.ts
tests/: generator.rs
ui/: package.json  pnpm-lock.yaml
ui/src/: App.css  App.tsx
ui/src-tauri/: Cargo.toml  tauri.conf.json
ui/src-tauri/src/: lib.rs  main.rs
(+110 files in other folders)
