[package]
name = "mavlink-generator-ui"
version = "0.1.0"
description = "MAVLink Generator desktop UI"
authors = ["Hatemsla"]
license = "MIT"
edition = "2021"
repository = "https://github.com/HatemslaH/mavlink_generator"

[lib]
name = "mavlink_generator_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mavlink_generator = { path = "../.." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
